[package]
name = "scatters"
version = "0.1.4"
edition = "2021"
authors = ["jo56"]
description = "A cut-up technique generator from text and ebook files in the terminal"
license = "MIT"
repository = "https://github.com/jo56/scatters"
keywords = ["tui", "poetry", "text", "generator", "cut-up"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
epub = "2.1"
pulldown-cmark = "0.12"
rand = "0.8"
dirs = "5.0"
